Added core dependencies and configured tsconfig

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "github-info.discord",
   "version": "0.0.1",
   "description": "",
-  "main": "Bot.ts",
+  "main": "bot.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/just-dudes/github-info.discord/issues"
   },
-  "homepage": "https://github.com/just-dudes/github-info.discord#readme"
+  "homepage": "https://github.com/just-dudes/github-info.discord#readme",
+  "dependencies": {
+    "typescript": "^4.8.2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.14",
+    "ts-node": "^10.9.1"
+  }
 }
