--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   },
   "homepage": "https://github.com/just-dudes/github-info.discord#readme",
   "dependencies": {
-    "typescript": "^4.8.2"
-  },
-  "devDependencies": {
+    "typescript": "^4.8.2",
     "@types/node": "^18.7.14",
     "ts-node": "^10.9.1"
   }
