--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "description": "",
   "main": "bot.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node ./src/bot.ts"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/just-dudes/github-info.discord.git"
+    "url": "git+https://github.com/jd-inc/github-info.discord.git"
   },
   "author": "joyfulpebble",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/just-dudes/github-info.discord/issues"
+    "url": "https://github.com/jd-inc/github-info.discord/issues"
   },
-  "homepage": "https://github.com/just-dudes/github-info.discord#readme",
+  "homepage": "https://github.com/jd-inc/github-info.discord#readme",
   "dependencies": {
-    "typescript": "^4.8.2",
+    
+  },
+  "devDependencies": {
     "@types/node": "^18.7.14",
-    "ts-node": "^10.9.1"
+    "discord.js": "^14.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2",
+    "dotenv": "^16.0.2"
   }
 }
