--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "bot.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node ./src/bot.ts"
+    "dev": "nodemon ./src/bot.ts",
+    "buid": "tsc -w"
   },
   "repository": {
     "type": "git",
@@ -18,13 +19,14 @@
   },
   "homepage": "https://github.com/jd-inc/github-info.discord#readme",
   "dependencies": {
-    
+    "discord.js": "^14.3.0",
+    "dotenv": "^16.0.2",
+    "mongoose": "^6.5.4"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
-    "discord.js": "^14.3.0",
-    "ts-node": "^10.9.1",
     "typescript": "^4.8.2",
-    "dotenv": "^16.0.2"
+    "ts-node": "^10.9.1",
+    "nodemon": "^2.0.19"
   }
 }
