Added `test` command, `command-handler`, update main files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-      "target": "ESNext",
+      "target": "ES6",
       "module": "commonjs",
       "rootDir": "./src/",
       "outDir": "./dist/",
@@ -14,6 +14,7 @@
       "resolveJsonModule": true,
       "forceConsistentCasingInFileNames": true,
       "removeComments": false,
+      "types": ["node", "discord.js"],
       "typeRoots": [
           "node_modules/@types"
       ],
