--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
-    "typescript": "^4.8.2",
+    "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
-    "nodemon": "^2.0.19"
+    "typescript": "^4.8.2"
   }
 }
