--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "octokit": "^2.0.7"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
